--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-MONGO_USER=mongo_user_1
-MONGO_PASSWORD=KMAYJQkgoMMgYWaJ
-MONGO_HOST=mongonode-0.an8z1gw.mongodb.net
-DB_NAME=Stars
+MONGO_USER=👀
+MONGO_PASSWORD=👀
+MONGO_HOST=👀
+DB_NAME=👀
 PORT=5000 
