update readme lucas

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-MONGO_USER=👀
-MONGO_PASSWORD=👀
-MONGO_HOST=👀
-DB_NAME=👀
+MONGO_USER='user_mongoloide_1'
+MONGO_PASSWORD='kkkkkkkkk'
+MONGO_HOST='exemplo.an8z1gw.mongodb.net'
+DB_NAME='Stars'
 PORT=5000 
