--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-MONGO_USER='user_mongoloide_1'
-MONGO_PASSWORD='kkkkkkkkk'
-MONGO_HOST='exemplo.an8z1gw.mongodb.net'
+MONGO_USER='mongo_user_1'
+MONGO_PASSWORD='f6xGKy7LweJR2R1r'
+MONGO_HOST='mongonode-0.an8z1gw.mongodb.net'
 DB_NAME='Stars'
 PORT=5000 
